--- a/app/src/main/res/drawable/player_three.xml
+++ b/app/src/main/res/drawable/player_three.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_three"
     android:layout_width="50dp"
     android:layout_height="50dp"
-    android:src="@drawable/Fingerhut"
+    android:src="@drawable/fingerhut"
     />
