--- a/app/src/main/res/drawable/player_five.xml
+++ b/app/src/main/res/drawable/player_five.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_five"
     android:layout_width="50dp"
     android:layout_height="50dp"
-    android:src="@drawable/Hut"
+    android:src="@drawable/hut"
     />
