--- a/app/src/main/res/drawable/player_four.xml
+++ b/app/src/main/res/drawable/player_four.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_four"
     android:layout_width="50dp"
     android:layout_height="50dp"
-    android:src="@drawable/Hund"
+    android:src="@drawable/hund"
     />
