--- a/app/src/main/res/drawable/player_seven.xml
+++ b/app/src/main/res/drawable/player_seven.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_seven"
     android:layout_width="50dp"
     android:layout_height="50dp"
-    android:src="@drawable/Schiff"
+    android:src="@drawable/schiff"
     />
