--- a/app/src/main/res/drawable/player_six.xml
+++ b/app/src/main/res/drawable/player_six.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_six"
     android:layout_width="50dp"
     android:layout_height="50dp"
-    android:src="@drawable/Karre"
+    android:src="@drawable/karre"
     />
