--- a/app/src/main/res/drawable/monopolyboard.xml
+++ b/app/src/main/res/drawable/monopolyboard.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/player_five"
+    android:id="@+id/player_one"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/hut"
+    android:src="@drawable/monopolyboardsmall"
     />
