--- a/app/src/main/res/drawable/player_one.xml
+++ b/app/src/main/res/drawable/player_one.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/player_four"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
+    android:id="@+id/player_one"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:src="@drawable/auto"
     />
