Added all players with color as a border
- Added remaining player images
- Edited the picture of the players to have colors as a border
- Added some example code for moving players horizontally

--- a/app/src/main/res/drawable/player_three.xml
+++ b/app/src/main/res/drawable/player_three.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_three"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/fingerhut"
+    android:src="@drawable/thimble_green"
     />
