--- a/app/src/main/res/drawable/layerlist_for_gameboard.xml
+++ b/app/src/main/res/drawable/layerlist_for_gameboard.xml
@@ -5,6 +5,16 @@
     <item android:drawable="@drawable/monopolyboard"/>
     <item android:drawable="@drawable/player_one"
         android:gravity="bottom|right"/>
+    <item android:drawable="@drawable/player_two"
+        android:gravity="bottom|right"/>
+    <item android:drawable="@drawable/player_three"
+        android:gravity="bottom|right"/>
+    <item android:drawable="@drawable/player_four"
+        android:gravity="bottom|right"/>
+    <item android:drawable="@drawable/player_five"
+        android:gravity="bottom|right"/>
+    <item android:drawable="@drawable/player_six"
+        android:gravity="bottom|right"/>
 
 
 </layer-list>
