--- a/app/src/main/res/drawable/player_five.xml
+++ b/app/src/main/res/drawable/player_five.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_five"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/hut"
+    android:src="@drawable/cap_orange"
     />
