--- a/app/src/main/res/drawable/player_six.xml
+++ b/app/src/main/res/drawable/player_six.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_six"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/karre"
+    android:src="@drawable/wheelbarrow_black"
     />
