--- a/app/src/main/res/drawable/player_two.xml
+++ b/app/src/main/res/drawable/player_two.xml
@@ -4,5 +4,5 @@
     android:id="@+id/player_two"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/ironer_blue"
+    android:src="@drawable/ironer_blue_transparent"
     />
