--- a/app/src/main/res/layout/fragment_drawcard.xml
+++ b/app/src/main/res/layout/fragment_drawcard.xml
@@ -6,30 +6,30 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageCard"
-        android:layout_width="396dp"
-        android:layout_height="267dp"
-        android:layout_marginStart="145dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="164dp"
+        android:id="@+id/ImageCard"
+        android:layout_width="473dp"
+        android:layout_height="276dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonContinueDrawCard"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/chance0" />
 
     <Button
-        android:id="@+id/buttonContinue"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="127dp"
+        android:id="@+id/buttonContinueDrawCard"
+        android:layout_width="wrap_content"
+        android:layout_height="59dp"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="293dp"
+        android:layout_marginBottom="16dp"
         android:text="continue"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageCard" />
+        app:layout_constraintTop_toBottomOf="@+id/ImageCard" />
 </androidx.constraintlayout.widget.ConstraintLayout>
