--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -87,6 +87,9 @@
         <action
             android:id="@+id/action_GameBoardUI_to_DiceFragment"
             app:destination="@id/DiceFragment" />
+        <action
+            android:id="@+id/action_GameBoardUI_to_DrawCard"
+            app:destination="@id/DrawCard" />
 
     </fragment>
 
@@ -100,4 +103,17 @@
             android:id="@+id/action_DiceFragment_to_GameBoardUI"
             app:destination="@id/GameBoardUI" />
     </fragment>
+
+
+    <fragment
+        android:id="@+id/DrawCard"
+        android:name="com.example.monopoly.ui.DrawCard"
+        android:label="DrawCard"
+        tools:layout="@layout/fragment_drawcard"
+        >
+        <action
+            android:id="@+id/action_DrawCard_to_GameBoardUI"
+            app:destination="@id/GameBoardUI" />
+    </fragment>
+
 </navigation>
