--- a/app/src/main/res/layout/join_game.xml
+++ b/app/src/main/res/layout/join_game.xml
@@ -78,7 +78,7 @@
                 android:backgroundTint="@color/white"
                 android:gravity="center"
                 android:hint="@string/game_key"
-                android:inputType="text"
+                android:inputType="numberDecimal"
                 android:textColor="@color/white"
                 android:textColorHint="@android:color/darker_gray"
                 android:textSize="16sp"
