Added Exit Button to Fragment

--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -194,4 +194,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.97" />
 
+    <Button
+        android:id="@+id/showPropertiesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:backgroundTint="@color/white"
+        android:drawableTint="@color/black"
+        android:foregroundTint="@color/black"
+        android:text="Properties"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.837" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
