--- a/app/src/main/res/layout/property_card_element.xml
+++ b/app/src/main/res/layout/property_card_element.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20sp"
-    android:layout_marginRight="20sp"
+    android:layout_margin="20sp"
     android:gravity="center_vertical">
 
     <ImageView
