Added exit button to PropertyCardFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -103,6 +103,9 @@
         android:label="PropertyCardFragment"
         tools:layout="@layout/fragment_property_card"
         >
+        <action
+            app:destination="@id/GameBoardUI"
+            android:id="@+id/action_PropertyCardFragment_to_GameboardUI"/>
     </fragment>
 
 
