Added move broadcast for other clients and locked ui elements accordingly

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -122,4 +122,8 @@
             app:destination="@id/GameBoardUI" />
     </fragment>
 
+    <action
+        android:id="@+id/move_to_GameBoardUI"
+        app:destination="@id/GameBoardUI" />
+
 </navigation>
