Added endTurn button plus functionality and protocol

--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -106,13 +106,13 @@
         />
 
     <Button
-        android:id="@+id/card"
+        android:id="@+id/endTurn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:drawableTint="@color/black"
         android:foregroundTint="@color/black"
-        android:text="Draw Card"
+        android:text="End Turn"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:alpha=".5"
