added music;  switch for sound on/off in settings and gameboard

--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -80,7 +80,7 @@
                 android:textColor="@color/white"
                 android:thumbTint="@color/white"
                 android:trackTint="@color/white"
-                android:checked="true"
+                android:checked="false"
                 tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
 
             <TextView
