--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -104,6 +104,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+    <Switch
+        android:id="@+id/switchsound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sound on/off"
+        android:checked="false"
+        app:layout_constraintStart_toEndOf="@id/time"
+        app:layout_constraintTop_toTopOf="@id/time"
+        app:layout_constraintVertical_bias="0.97"
+
+        />
 
     <Button
         android:id="@+id/endTurn"
