--- a/app/src/main/res/layout/property_card_element.xml
+++ b/app/src/main/res/layout/property_card_element.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/buyHouseButton"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_margin="20sp"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/propertyCardImageView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/ownerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/white" />
+
     <TextView
         android:id="@+id/propertyHouses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/buyHouseBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
