--- a/app/src/main/res/layout/property_card_element.xml
+++ b/app/src/main/res/layout/property_card_element.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/buyHouseButton"
+    android:id="@+id/propertyCardLayout"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_margin="20sp"
@@ -30,5 +30,9 @@
     <Button
         android:id="@+id/buyHouseBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:drawableTint="@color/black"
+        android:foregroundTint="@color/black"
+        android:textColor="@color/black"/>
 </LinearLayout>
