--- a/app/src/main/res/layout/fragment_drawcard.xml
+++ b/app/src/main/res/layout/fragment_drawcard.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroundgameboard">
 
     <ImageView
         android:id="@+id/ImageCard"
@@ -26,7 +27,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="293dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#FFFFFF"
         android:text="continue"
+        android:textColor="#4E4E4E"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
