Fixed that all 6 players were shown on the gameboard

--- a/app/src/main/res/layout/fragment_dice.xml
+++ b/app/src/main/res/layout/fragment_dice.xml
@@ -39,6 +39,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/white"
+        android:drawableTint="@color/black"
+        android:foregroundTint="@color/black"
+        android:textColor="@color/black"
         android:text="Continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
