--- a/app/src/main/res/drawable/layerlist_for_gameboard.xml
+++ b/app/src/main/res/drawable/layerlist_for_gameboard.xml
@@ -4,17 +4,24 @@
 
     <item android:drawable="@drawable/monopolyboard"/>
     <item android:drawable="@drawable/player_one"
-        android:gravity="bottom|right"/>
+        android:gravity="bottom|right"
+        android:id="@+id/player1"
+        />
     <item android:drawable="@drawable/player_two"
-        android:gravity="bottom|right"/>
+        android:gravity="bottom|right"
+        android:id="@+id/player2"/>
     <item android:drawable="@drawable/player_three"
-        android:gravity="bottom|right"/>
+        android:gravity="bottom|right"
+        android:id="@+id/player3"/>
     <item android:drawable="@drawable/player_four"
-        android:gravity="bottom|right"/>
+        android:gravity="bottom|right"
+        android:id="@+id/player4"/>
     <item android:drawable="@drawable/player_five"
-        android:gravity="bottom|right"/>
+        android:gravity="bottom|right"
+        android:id="@+id/player5"/>
     <item android:drawable="@drawable/player_six"
-        android:gravity="bottom|right"/>
+        android:gravity="bottom|right"
+        android:id="@+id/player6"/>
 
 
 </layer-list>
