--- a/app/src/main/res/layout/fragment_end_game.xml
+++ b/app/src/main/res/layout/fragment_end_game.xml
@@ -244,6 +244,18 @@
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
+    <TextView
+        android:id="@+id/congratulationsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Default"
+        android:visibility="invisible"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/white" />
+
     <Button
         android:id="@+id/closeButton"
         android:layout_width="wrap_content"
