--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -90,7 +90,8 @@
                 android:text="@string/placeholder"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                tools:ignore="VisualLintBounds" />
+                tools:ignore="VisualLintBounds"
+                android:visibility="invisible"/>
             <Switch
                 android:id="@+id/switch2"
                 android:layout_width="wrap_content"
@@ -99,7 +100,8 @@
                 android:textColor="@color/white"
                 android:thumbTint="@color/white"
                 android:trackTint="@color/white"
-                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,VisualLintBounds" />
+                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,VisualLintBounds"
+                android:visibility="invisible"/>
 
         </TableRow>
 
@@ -120,7 +122,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/test142763"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:visibility="invisible"/>
             <Switch
                 android:id="@+id/switch3"
                 android:layout_width="wrap_content"
@@ -130,7 +133,8 @@
                 android:textColor="@color/white"
                 android:thumbTint="@color/white"
                 android:trackTint="@color/white"
-                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
+                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml"
+                android:visibility="invisible"/>
 
             <TextView
                 android:id="@+id/textView46"
@@ -139,7 +143,8 @@
                 android:text="@string/placeholder"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                tools:ignore="VisualLintBounds" />
+                tools:ignore="VisualLintBounds"
+                android:visibility="invisible"/>
             <Switch
                 android:id="@+id/switch4"
                 android:layout_width="wrap_content"
@@ -148,7 +153,8 @@
                 android:textColor="@color/white"
                 android:thumbTint="@color/white"
                 android:trackTint="@color/white"
-                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,VisualLintBounds" />
+                tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,VisualLintBounds"
+                android:visibility="invisible"/>
         </TableRow>
 
         <TableRow
